Add lightning surrounding emissions

--- a/ml-setup.ipynb
+++ b/ml-setup.ipynb
@@ -307,27 +307,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_011\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_017\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_012\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_019\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_008\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_016\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_013\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_006\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_001\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_002\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_018\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_004\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_003\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_014\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_015\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_009\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_007\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_010\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_005\n",
-      "Reading in data from /global/home/users/qindan_zhu/myscratch/jlgrant/ML-WRF/ML-WRF/met_conus_2005_020\n",
-      "--- 0.7073356151580811 minutes ---\n"
+      "Reading in data from /Volumes/share-wrf3/ML-WRF/met_conus_2005_005\n",
+      "Reading in data from /Volumes/share-wrf3/ML-WRF/met_conus_2005_002\n",
+      "Reading in data from /Volumes/share-wrf3/ML-WRF/met_conus_2005_003\n",
+      "Reading in data from /Volumes/share-wrf3/ML-WRF/met_conus_2005_004\n",
+      "Reading in data from /Volumes/share-wrf3/ML-WRF/met_conus_2005_001\n",
+      "--- 0.32567743460337323 minutes ---\n"
      ]
     }
    ],
@@ -335,7 +320,7 @@
     "#to do: surrounding lightning and vertical distribution of lightnings haven't been implemented yet\n",
     "import time\n",
     "orig_filenames = sorted(glob(os.path.join(orig_file_path, 'met_conus*')))\n",
-    "orig_filenames = orig_filenames[0:20]\n",
+    "orig_filenames = orig_filenames[0:5]\n",
     "train_filenames, test_filenames = train_test_filename(orig_filenames)\n",
     "x_total = []\n",
     "y_total = []\n",
@@ -352,15 +337,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "additional features: ['xlon', 'xlat', 'date', 'elev', 'hour']\n",
-      "features: ['COSZEN', 'IC_FLASHCOUNT', 'CG_FLASHCOUNT', 'U', 'V', 'W', 'PBLH', 'E_NO', 'pres', 'temp', 'LAI', 'HGT', 'CLDFRA', 'SWDOWN', 'GLW', 'surr_emis_00', 'surr_emis_01', 'surr_emis_02', 'surr_emis_03', 'surr_emis_04', 'surr_emis_05', 'surr_emis_06', 'surr_emis_07', 'surr_emis_08', 'surr_emis_09', 'surr_emis_10', 'surr_emis_11', 'surr_emis_12', 'surr_emis_13', 'surr_emis_14', 'surr_emis_15', 'surr_emis_16', 'surr_emis_17', 'surr_emis_18', 'surr_emis_19', 'surr_emis_20', 'surr_emis_21', 'surr_emis_22', 'surr_emis_23']\n"
+      "additional features: ['xlon', 'xlat', 'date', 'elev', 'hour', 'IC_FLASHCOUNT', 'CG_FLASHCOUNT']\n",
+      "features: ['COSZEN', 'U', 'V', 'W', 'PBLH', 'E_NO', 'pres', 'temp', 'LAI', 'HGT', 'CLDFRA', 'SWDOWN', 'GLW', 'anthro_surr_emis_00', 'lightning_surr_emis_00', 'anthro_surr_emis_01', 'lightning_surr_emis_01', 'anthro_surr_emis_02', 'lightning_surr_emis_02', 'anthro_surr_emis_03', 'lightning_surr_emis_03', 'anthro_surr_emis_04', 'lightning_surr_emis_04', 'anthro_surr_emis_05', 'lightning_surr_emis_05', 'anthro_surr_emis_06', 'lightning_surr_emis_06', 'anthro_surr_emis_07', 'lightning_surr_emis_07', 'anthro_surr_emis_08', 'lightning_surr_emis_08', 'anthro_surr_emis_09', 'lightning_surr_emis_09', 'anthro_surr_emis_10', 'lightning_surr_emis_10', 'anthro_surr_emis_11', 'lightning_surr_emis_11', 'anthro_surr_emis_12', 'lightning_surr_emis_12', 'anthro_surr_emis_13', 'lightning_surr_emis_13', 'anthro_surr_emis_14', 'lightning_surr_emis_14', 'anthro_surr_emis_15', 'lightning_surr_emis_15', 'anthro_surr_emis_16', 'lightning_surr_emis_16', 'anthro_surr_emis_17', 'lightning_surr_emis_17', 'anthro_surr_emis_18', 'lightning_surr_emis_18', 'anthro_surr_emis_19', 'lightning_surr_emis_19', 'anthro_surr_emis_20', 'lightning_surr_emis_20', 'anthro_surr_emis_21', 'lightning_surr_emis_21', 'anthro_surr_emis_22', 'lightning_surr_emis_22', 'anthro_surr_emis_23', 'lightning_surr_emis_23', 'total_lightning']\n"
      ]
     }
    ],
@@ -371,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -387,10 +372,10 @@
        "    <tr><td> </td><th> Array </th><th> Chunk </th></tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr><th> Bytes </th><td> 372.13 MB </td> <td> 372.13 MB </td></tr>\n",
+       "    <tr><th> Bytes </th><td> 186.06 MB </td> <td> 186.06 MB </td></tr>\n",
        "    <tr><th> Shape </th><td> (46516000,) </td> <td> (46516000,) </td></tr>\n",
-       "    <tr><th> Count </th><td> 6 Tasks </td><td> 1 Chunks </td></tr>\n",
-       "    <tr><th> Type </th><td> float64 </td><td> numpy.MaskedArray </td></tr>\n",
+       "    <tr><th> Count </th><td> 7 Tasks </td><td> 1 Chunks </td></tr>\n",
+       "    <tr><th> Type </th><td> float32 </td><td> numpy.MaskedArray </td></tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</td>\n",
@@ -417,16 +402,79 @@
        "</table>"
       ],
       "text/plain": [
-       "dask.array<reshape, shape=(46516000,), dtype=float64, chunksize=(46516000,), chunktype=numpy.MaskedArray>"
+       "dask.array<reshape, shape=(46516000,), dtype=float32, chunksize=(46516000,), chunktype=numpy.MaskedArray>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_total[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style=\"border: 2px solid white;\">\n",
+       "<tr>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3 style=\"text-align: left;\">Client</h3>\n",
+       "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:61441</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a></li>\n",
+       "</ul>\n",
+       "</td>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3 style=\"text-align: left;\">Cluster</h3>\n",
+       "<ul style=\"text-align: left; list-style:none; margin: 0; padding: 0;\">\n",
+       "  <li><b>Workers: </b>4</li>\n",
+       "  <li><b>Cores: </b>8</li>\n",
+       "  <li><b>Memory: </b>17.18 GB</li>\n",
+       "</ul>\n",
+       "</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Client: 'tcp://127.0.0.1:61441' processes=4 threads=8, memory=17.18 GB>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prepare matrix for ml\n",
+    "import xgboost as xgb\n",
+    "starttime = time.time()\n",
+    "dtrain = xgb.dask.DaskDMatrix(client, da.array(x_total), da.array(y_total))\n",
+    "print(\"--- {} minutes ---\".format((time.time() - starttime)/60))"
    ]
   },
   {
@@ -512,38 +560,6 @@
    ],
    "source": [
     "client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - ERROR - Couldn't gather keys {\"('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 4)\": ['tcp://10.0.5.223:33015'], \"('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 0)\": ['tcp://10.0.5.223:33015'], \"('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 1)\": ['tcp://10.0.5.223:33015'], \"('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 3)\": ['tcp://10.0.5.223:33015'], \"('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 2)\": ['tcp://10.0.5.223:33015']} state: ['waiting', 'waiting', 'waiting', 'waiting', 'waiting'] workers: ['tcp://10.0.5.223:33015']\n",
-      "NoneType: None\n",
-      "distributed.scheduler - ERROR - Workers don't have promised key: ['tcp://10.0.5.223:33015'], ('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 4)\n",
-      "NoneType: None\n",
-      "distributed.scheduler - ERROR - Workers don't have promised key: ['tcp://10.0.5.223:33015'], ('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 0)\n",
-      "NoneType: None\n",
-      "distributed.scheduler - ERROR - Workers don't have promised key: ['tcp://10.0.5.223:33015'], ('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 1)\n",
-      "NoneType: None\n",
-      "distributed.scheduler - ERROR - Workers don't have promised key: ['tcp://10.0.5.223:33015'], ('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 3)\n",
-      "NoneType: None\n",
-      "distributed.scheduler - ERROR - Workers don't have promised key: ['tcp://10.0.5.223:33015'], ('reshape-79d9f0f3fe1d7fc2b8b816e7e9e2845b', 2)\n",
-      "NoneType: None\n"
-     ]
-    }
-   ],
-   "source": [
-    "#prepare matrix for ml\n",
-    "import xgboost as xgb\n",
-    "starttime = time.time()\n",
-    "dtrain = xgb.dask.DaskDMatrix(client, da.array(x_total), da.array(y_total))\n",
-    "print(\"--- {} minutes ---\".format((time.time() - starttime)/60))"
    ]
   },
   {
@@ -653,9 +669,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "SatelliteNO2",
    "language": "python",
-   "name": "venv"
+   "name": "satelliteno2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -667,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
